--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.7",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
