--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,14 @@ dist-ssr
 *.sln
 *.sw?
 
+# Environment Variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Local Netlify folder
 .netlify
+
+
