--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
     "@supabase/supabase-js": "^2.42.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -29,6 +30,7 @@
     "react-easy-crop": "^5.0.7",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.5",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
@@ -36,7 +38,9 @@
     "stripe": "^15.10.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uid": "^2.0.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
