--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^3.5.0",
     "@supabase/supabase-js": "^2.42.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
